--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "hexo": "^6.3.0",
+    "hexo-butterfly-artitalk": "^1.0.4",
+    "hexo-butterfly-artitalk-pro": "^1.0.5",
+    "hexo-butterfly-douban": "^1.2.5",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -24,6 +27,7 @@
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-tag-aplayer": "^3.0.4",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "npm": "^6.10.2"
   }
 }
